# manipulation_project

moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: pick_and_place.launch.py
moveit2_scripts/src/: pick_and_place_real.cpp  pick_and_place_sim.cpp  test_gripper.cpp
my_moveit_config/: CMakeLists.txt  package.xml
my_moveit_config/config/: moveit_controllers.yaml  name.srdf
my_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
real_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
real_moveit_config/config/: joint_limits.yaml  moveit_controllers_real.yaml  name.srdf
real_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
